# liquidhaskell-amortized-complexity

./: .envrc  .gitignore  CHANGELOG.md  README.md  code.cabal  flake.nix  hie.yaml
code/: cabal.project  code.cabal  hie.yaml  stack.yaml
code/src/: Counter.hs  Heap.hs  Heap2.hs  Main.hs  Seq.hs  Seq2.hs  Stack.hs
code/src/Proofs/: Concat.hs  ConcatTime.hs  Cons.hs  Snoc.hs  Tails.hs
paper/: Makefile  main.tex  references.bib
presentation/: .gitignore  Makefile  main.tex
seminar_paper/: .gitignore  Makefile  main.tex  references.bib
src/: Lemmas.hs  Seq.hs  Stack.hs
src/Proofs/: Cons.hs  Tails.hs
