cabal-version:       2.2
name:                code
version:             0.0.0.0
synopsis:            Code for the seminar paper
description:         Code for the seminar paper
license:             MIT
license-file:        LICENSE
author:              Jan van Brügge
maintainer:          Jan van Brügge <supermanitu@gmail.com>
copyright:           2022 Jan van Brügge
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

common common-options
  build-depends:       liquid-base
                     , liquidhaskell
                     , liquid-prelude
                     , containers

  ghc-options:         -Wall
                       -Wno-unused-top-binds
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -fplugin=LiquidHaskell
                       -fplugin-opt=LiquidHaskell:--reflect
                       -fplugin-opt=LiquidHaskell:--no-adt
                       -fplugin-opt=LiquidHaskell:--max-case-expand=100000
                       -- -fplugin-opt=LiquidHaskell:--diff
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable code
  import:              common-options
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       Stack
                     , Seq2

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
