cabal-version:       2.2
name:                code
version:             0.0.0.0
synopsis:            Code for the seminar paper
description:         Code for the seminar paper
license:             MIT
license-file:        LICENSE
author:              Jan van Brügge
maintainer:          Jan van Brügge <supermanitu@gmail.com>
copyright:           2022 Jan van Brügge
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

common common-options
  build-depends:       base
                     , liquidhaskell
                     , liquid-prelude
                     --, containers

  ghc-options:         -Wall
                       -Wno-unused-top-binds
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -fplugin=LiquidHaskell
                       -fplugin-opt=LiquidHaskell:--reflect
                       -- -fplugin-opt=LiquidHaskell:--diff
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable code
  import:              common-options
  hs-source-dirs:      src
  main-is:             Main.hs

  other-modules:       Stack
                     , Seq2
                     , Counter
                     , Heap2

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
